--- a/Resources/administration/src/app/component/media/sw-media-base-item/sw-media-base-item.html.twig
+++ b/Resources/administration/src/app/component/media/sw-media-base-item/sw-media-base-item.html.twig
@@ -6,11 +6,13 @@
                  :class="selectionIndicatorClasses"
                  @click="onClickedItem">
 
-                <sw-icon
-                    v-if="listSelected"
-                    size="16px"
-                    name="small-default-checkmark-line-small">
-                </sw-icon>
+                {% block sw_media_item_selection_indicator_icon %}
+                    <sw-icon
+                        v-if="listSelected"
+                        size="16px"
+                        name="small-default-checkmark-line-small">
+                    </sw-icon>
+                {% endblock %}
             </div>
         {% endblock %}
 
@@ -23,9 +25,24 @@
         {% block sw_media_base_item_name_container %}
             <div class="sw-media-base-item__name-container">
                 {% block sw_media_base_item_name %}
-                    <slot name="media-item-name">
-                        {% block sw_media_base_item_slot_media_item_name %}{% endblock %}
-                    </slot>
+                    <sw-field v-if="isInlineEdit"
+                              ref="inputItemName"
+                              class="sw-media-base-item__name-field"
+                              :value="editValue"
+                              v-autofocus
+                              @click.stop
+                              @blur="onBlurInlineEdit"
+                              @keyup.enter="onDoRenaming"
+                              @keyup.esc="onCancelRenaming">
+                    </sw-field>
+                    <div v-else
+                         class="sw-media-base-item__name"
+                         ref="itemName"
+                         :title="displayName"
+                         :data-last-content="lastContent"
+                         @dblclick="startInlineEdit">
+                        {{ displayName }}
+                    </div>
                 {% endblock %}
             </div>
         {% endblock %}
