--- a/Resources/administration/src/app/component/base/sw-tabs/sw-tabs.html.twig
+++ b/Resources/administration/src/app/component/base/sw-tabs/sw-tabs.html.twig
@@ -1,5 +1,5 @@
 {% block sw_tabs %}
-    <div class="sw-tabs">
+    <div class="sw-tabs" :class="tabsClass">
         {% block sw_tabs_container %}
             <div class="sw-tabs__container">
                 {% block sw_tabs_navigation %}
