--- a/Resources/administration/src/module/sw-media/page/sw-media-index/sw-media-index.less
+++ b/Resources/administration/src/module/sw-media/page/sw-media-index/sw-media-index.less
@@ -41,7 +41,7 @@
 
     .sw-media-index__options-container {
         margin-left: auto;
-        padding: 24px 10px 0 20px ;
+        padding: 24px 10px 14px 20px ;
 
         .sw-field {
             display: inline-grid;
@@ -72,7 +72,7 @@
     }
 
     .sw-media-index__media-grid {
-        padding: 24px 10px 0 10px;
+        padding: 10px 10px 0 10px;
     }
 
     .sw-media-index__change {
