NEXT-679 - Fix e2e tests

--- a/Resources/administration/src/app/component/media/sw-media-base-item/sw-media-base-item.html.twig
+++ b/Resources/administration/src/app/component/media/sw-media-base-item/sw-media-base-item.html.twig
@@ -1,10 +1,10 @@
 {%  block sw_media_base_item %}
     <div class="sw-media-base-item" :class="mediaItemClasses" @click="handleItemClick">
-        {% block sw_media_item_selected_indicator %}
+        {% block sw_media_base_item_selected_indicator %}
             <div v-if="!isList"
-                 class="sw-media-item__selected-indicator"
+                 class="sw-media-base-item__selected-indicator"
                  :class="selectionIndicatorClasses"
-                 @click="doSelectItem">
+                 @click="onClickedItem">
 
                 <sw-icon
                     v-if="listSelected"
