--- a/Resources/administration/src/module/sw-media/page/sw-media-index/sw-media-index.html.twig
+++ b/Resources/administration/src/module/sw-media/page/sw-media-index/sw-media-index.html.twig
@@ -26,10 +26,10 @@
             <template slot="smart-bar-actions">
 
                 {% block sw_media_index_smart_bar_media_upload %}
-                    <sw-media-upload-button
+                    <sw-media-upload
                         variant="compact"
                         @new-upload-started="onNewUpload">
-                    </sw-media-upload-button>
+                    </sw-media-upload>
                 {% endblock %}
 
             </template>
