--- a/Resources/administration/src/app/component/media/sw-media-modal-replace/sw-media-modal-replace.html.twig
+++ b/Resources/administration/src/app/component/media/sw-media-modal-replace/sw-media-modal-replace.html.twig
@@ -4,13 +4,13 @@
               :title="$tc('global.sw-media-modal-replace.titleModal')"
               @closeModal="emitCloseReplaceModal">
 
-        <sw-media-replace-button
+        <sw-media-replace
             class="sw-media-modal-replace__upload"
             :autoUpload="false"
             :itemToReplace="itemToReplace"
             variant="regular"
             @new-upload="onNewUpload">
-        </sw-media-replace-button>
+        </sw-media-replace>
 
         {% block sw_media_modal_replace_modal_footer %}
             <template slot="modal-footer">
