--- a/Resources/administration/src/app/component/media/sw-media-upload/sw-media-upload.html.twig
+++ b/Resources/administration/src/app/component/media/sw-media-upload/sw-media-upload.html.twig
@@ -1,20 +1,20 @@
-{% block sw_media_upload_button %}
-    <div class="sw-media-upload-button">
-        {% block sw_media_upload_button_compact %}
-            <div v-if="variant == 'compact'" class="sw-media-upload-button__content">
+{% block sw_media_upload %}
+    <div class="sw-media-upload">
+        {% block sw_media_upload_compact %}
+            <div v-if="variant == 'compact'" class="sw-media-upload__content">
                 {% block sw_media_upload_compact_button_url_upload %}
                 <sw-button @click="openUrlModal">
-                    {{ $tc('global.sw-media-upload-button.buttonUrlUpload') }}
+                    {{ $tc('global.sw-media-upload.buttonUrlUpload') }}
                 </sw-button>
                 {% endblock %}
 
                 {% block sw_media_upload_compact_button_file_upload %}
                     <sw-button variant="primary" @click="onClickUpload">
-                        {{ $tc('global.sw-media-upload-button.buttonFileUpload') }}
+                        {{ $tc('global.sw-media-upload.buttonFileUpload') }}
                     </sw-button>
                 {% endblock %}
 
-                {% block sw_media_upload_button_compact_url_form %}
+                {% block sw_media_upload_compact_url_form %}
                     <sw-media-url-form
                         v-if="showUrlInput"
                         variant="modal"
@@ -25,18 +25,18 @@
             </div>
         {% endblock %}
 
-        {% block sw_media_upload_button_regular %}
-            <div v-if="variant == 'regular'" class="sw-media-upload-button__content">
-                {% block sw_media_upload_button_regular_drop_zone %}
-                    <div class="sw-upload-button__dropzone" ref="dropzone" :class="isDragActiveClass">
-                        {% block sw_media_upload_button_regular_caption %}
-                            <div v-if="caption" class="sw-upload-button__upload-caption">
+        {% block sw_media_upload_regular %}
+            <div v-if="variant == 'regular'" class="sw-media-upload__content">
+                {% block sw_media_upload_regular_drop_zone %}
+                    <div class="sw-media-upload__dropzone" ref="dropzone" :class="isDragActiveClass">
+                        {% block sw_media_upload_regular_caption %}
+                            <div v-if="caption" class="sw-media-upload__upload-caption">
                                 <sw-icon name="default-action-cloud-upload" medium></sw-icon>
                                 {{ caption }}
                             </div>
                         {% endblock %}
 
-                        {% block sw_media_upload_button_regular_url_form %}
+                        {% block sw_media_upload_regular_url_form %}
                             <sw-media-url-form
                                 v-if="showUrlInput"
                                 variant="inline"
@@ -44,21 +44,21 @@
                             </sw-media-url-form>
                         {% endblock %}
 
-                        {% block sw_media_upload_button_regular_file_upload %}
-                            <div v-else class="sw-media-upload-button__file-form">
-                                {% block sw_media_upload_button_regular_preview %}
-                                    <div v-if="showPreview" class="sw-media-upload-button__preview-placeholder">
-                                        {% block sw_media_upload_button_regular_preview_file %}
+                        {% block sw_media_upload_regular_file_upload %}
+                            <div v-else class="sw-media-upload__file-form">
+                                {% block sw_media_upload_regular_preview %}
+                                    <div v-if="showPreview" class="sw-media-upload__preview-placeholder">
+                                        {% block sw_media_upload_regular_preview_file %}
                                             <sw-media-preview
                                                 v-if="hasPreviewFile"
-                                                class="sw-media-upload-button__preview"
+                                                class="sw-media-upload__preview"
                                                 :item="previewMediaEntity">
                                             </sw-media-preview>
                                         {% endblock %}
 
-                                        {% block sw_media_upload_button_regular_preview_fallback %}
-                                            <div v-else class="sw-media-upload-button__preview sw-media-upload-button__preview--is-fallback">
-                                                <sw-icon class="sw-media-upload-button__fallback-icon"
+                                        {% block sw_media_upload_regular_preview_fallback %}
+                                            <div v-else class="sw-media-upload__preview is--fallback">
+                                                <sw-icon class="sw-media-upload__fallback-icon"
                                                          name="default-object-image"
                                                          small>
                                                 </sw-icon>
@@ -67,21 +67,21 @@
                                     </div>
                                 {% endblock %}
 
-                                {% block sw_media_upload_button_regular_upload_button %}
-                                    <sw-button class="sw-media-upload-button__button"
+                                {% block sw_media_upload_regular_upload_button %}
+                                    <sw-button class="sw-media-upload__button"
                                                variant="primary"
                                                size="small"
                                                @click="onClickUpload">
-                                        {{ $tc('global.sw-media-upload-button.buttonFileUpload') }}
+                                        {{ $tc('global.sw-media-upload.buttonFileUpload') }}
                                     </sw-button>
                                 {% endblock %}
 
-                                {% block sw_media_upload_button_regular_media_sidebar_button %}
-                                    <sw-button class="sw-media-upload-button__button"
+                                {% block sw_media_upload_regular_media_sidebar_button %}
+                                    <sw-button class="sw-media-upload__button"
                                                size="small"
-                                               :disabled="!isMediaSidebarAvailable"
+                                               :disabled="!hasOpenSidebarButtonListener"
                                                @click="onClickOpenMediaSidebar">
-                                        {{ $tc('global.sw-media-upload-button.buttonOpenMedia') }}
+                                        {{ $tc('global.sw-media-upload.buttonOpenMedia') }}
                                     </sw-button>
                                 {% endblock %}
                             </div>
@@ -89,11 +89,12 @@
                     </div>
                 {% endblock %}
 
-                {% block sw_media_upload_button_regular_switch %}
-                    <div class="sw-media-upload-button__switch-container">
+                {% block sw_media_upload_regular_switch %}
+                    <div class="sw-media-upload__switch-container">
                         <sw-button
-                            class="sw-media-upload-button__switch-mode"
+                            class="sw-media-upload__switch-mode"
                             @click="toggleShowUrlFields">
+                            <sw-icon class="sw-media-upload__plus-icon" name="default-basic-plus-line" small></sw-icon>
                             {{ toggleButtonCaption }}
                         </sw-button>
                     </div>
@@ -101,9 +102,9 @@
             </div>
         {% endblock %}
 
-        {% block sw_media_upload_button_file_input %}
-            <form class="sw-media-upload-button__form" ref="fileForm">
-                <input class="sw-media-upload-button__file-input"
+        {% block sw_media_upload_file_input %}
+            <form class="sw-media-upload__form" ref="fileForm">
+                <input class="sw-media-upload__file-input"
                        type="file"
                        id="files"
                        ref="fileInput"
