--- a/Resources/administration/src/app/component/structure/sw-card-view/sw-card-view.less
+++ b/Resources/administration/src/app/component/structure/sw-card-view/sw-card-view.less
@@ -28,7 +28,7 @@
         @media screen and (max-width: 1360px) {
             padding: 15px;
 
-            .sw-tabs {
+            .sw-tabs__bar {
                 max-width: 770px;
                 margin-bottom: 30px;
             }
