NEXT-1207 - Show notification that no quickinfo is available for folders

--- a/Resources/administration/src/app/component/media/sw-media-folder-item/sw-media-folder-item.html.twig
+++ b/Resources/administration/src/app/component/media/sw-media-folder-item/sw-media-folder-item.html.twig
@@ -39,7 +39,7 @@
                         {% endblock %}
 
                         {% block sw_media_media_item_context_item_delete %}
-                            <sw-context-menu-item variant="danger">
+                            <sw-context-menu-item disabled svariant="danger" @click="openModalDelete">
                                 {{ $tc('global.sw-media-folder-item.labelContextMenuDelete') }}
                             </sw-context-menu-item>
                         {% endblock %}
