--- a/Resources/administration/src/module/sw-media/component/sw-media-collapse/sw-media-collapse.less
+++ b/Resources/administration/src/module/sw-media/component/sw-media-collapse/sw-media-collapse.less
@@ -9,9 +9,9 @@
         display: grid;
         grid-template-columns: 1fr auto;
         cursor: pointer;
-        padding-bottom: 16px;
+        padding-top: 16px;
         color: @sw-media-collapse-color-title;
-        border-bottom: 1px solid @sw-media-collapse-color-divider;
+        border-top: 1px solid @sw-media-collapse-color-divider;
     }
 
     .sw-media-collapse__title {
